--- a/recipe_site/recipes/templates/base.html
+++ b/recipe_site/recipes/templates/base.html
@@ -15,6 +15,7 @@
         <a href="{% url 'logout' %}">Выйти</a>
         {% else %}
         <a href="{% url 'login' %}">Войти</a>
+        <a href="{% url 'register' %}">Регистрация</a>
         {% endif %}
     </nav>
 </header>
