--- a/recipe_site/recipes/templates/home.html
+++ b/recipe_site/recipes/templates/home.html
@@ -1,10 +1,24 @@
 {% extends 'base.html' %}
 {% block title %}Главная{% endblock %}
 {% block content %}
-<h2>Случайные рецепты</h2>
-<ul>
-    {% for recipe in recipes %}
-    <li><a href="{% url 'recipe_detail' recipe.id %}">{{ recipe.title }}</a></li>
-    {% endfor %}
-</ul>
+<div class="container">
+    <h2 class="center-align">Случайные рецепты</h2>
+    <ul class="collection">
+        {% for recipe in recipes %}
+        <li class="collection-item avatar">
+            {% if recipe.image %}
+            <img src="{{ recipe.image.url }}" alt="{{ recipe.title }}" class="circle">
+            {% endif %}
+            <span class="title"><a href="{% url 'recipe_detail' recipe.id %}">{{ recipe.title }}</a></span>
+            <p>
+                <strong>Описание:</strong> {{ recipe.description|truncatewords:20 }}<br>
+                <strong>Время приготовления:</strong> {{ recipe.cooking_time }} минут
+            </p>
+        </li>
+        {% endfor %}
+    </ul>
+    <div class="center-align">
+        <a href="{% url 'recipe_list' %}" class="waves-effect waves-light btn">Список всех рецептов</a>
+    </div>
+</div>
 {% endblock %}
