--- a/recipe_site/recipes/templates/registration/logout.html
+++ b/recipe_site/recipes/templates/registration/logout.html
@@ -2,9 +2,10 @@
 
 {% block content %}
 <h2>Вы действительно хотите выйти?</h2>
-<form method="post">
+<form action="{% url 'logout' %}" method="post">
     {% csrf_token %}
     <button type="submit">Выйти</button>
 </form>
+
 {% endblock %}
 
