--- a/recipe_site/recipes/templates/registration/login.html
+++ b/recipe_site/recipes/templates/registration/login.html
@@ -1,12 +1,32 @@
 {% extends 'base.html' %}
+{% load form_extras %}
 
 {% block title %}Вход{% endblock %}
 
 {% block content %}
-<h2>Вход</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Войти</button>
-</form>
+<div class="container">
+    <h2 class="center-align">Вход в систему</h2>
+    <div class="card">
+        <div class="card-content">
+            <span class="card-title">Введите ваши данные</span>
+            <form method="post">
+                {% csrf_token %}
+                <div class="input-field">
+                    <label for="{{ form.username.id_for_label }}" class="active">Имя пользователя</label>
+                    {{ form.username|add_class:"validate" }}
+                </div>
+                <div class="input-field">
+                    <label for="{{ form.password.id_for_label }}" class="active">Пароль</label>
+                    {{ form.password|add_class:"validate" }}
+                </div>
+
+                <button type="submit" class="btn waves-effect waves-light teal">Войти</button>
+                <a href="{% url 'register' %}" class="btn waves-effect waves-light green">Регистрация</a>
+            </form>
+        </div>
+        <div class="card-action">
+
+        </div>
+    </div>
+</div>
 {% endblock %}
